2007-09-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/connection-editor/nm-connection-editor.h: added flags for pages.
	
	* src/connection-editor/nm-connection-editor.c
	(nm_connection_editor_set_connection): use g_object_unref for
	destroying the NMConnection.
	(nm_connection_editor_new): added flags argument.

	* src/connection-editor/nm-connection-list.[ch]:
	* src/connection-editor/nm-connection-editor.glade: added connection
	list dialog.
	
2007-09-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/connection-editor.c: fixed compilation warnings.
	(wireless_*_changed): added missing callbacks for wireless options.

2007-09-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* src/connection-editor: new connection editor.

	* configure.ac: added connection editor to the build.

2007-09-16  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (read_connection_from_gconf, copy_connection_to_gconf): use new
			NMSettings value enumeration functions from libnm-util to
			simplify read/write of settings from GConf

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  src/Makefile.am
	  src/applet-compat.c
	  src/applet-compat.h
	  src/applet.c
	  src/applet.h
		- Handle removal of unused stuff from libnm-util

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_new_from_connection,
		   applet_dbus_connection_settings_get_id,
		   applet_dbus_connection_settings_get_settings,
		   applet_dbus_connection_settings_get_secrets): a bit of extra
			validation of NMConnection objects

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (copy_connection_to_gconf): handle lack of an 802-11-wireless-security
			setting; open networks don't need one

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (read_connection_from_gconf): use the right gconf key

2007-09-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c