@@ -1,3 +1,12 @@
+2007-09-19  Dan Williams <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_menu_item_activate, nma_menu_add_create_network_item,
+		   ap_hash, nma_add_networks_helper, sort_wireless_networks,
+		   nma_menu_device_add_networks, foo_bssid_strength_changed,
+		   foo_wireless_state_change): adapt for changes to libnm-glib, SSID
+			must not be freed
+
 2007-09-20  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* src/connection-editor/nm-connection-editor.h: added flags for pages.
